# cmake-practice

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakelists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt
t6/: CMakeLists.txt
t6/src/: CMakeLists.txt  main.c
t7/src/: CMakeLists.txt  main.c
